--- a/doc/agile/sprint_backlog_93.org
+++ b/doc/agile/sprint_backlog_93.org
@@ -12,43 +12,44 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-12-11 Sun 16:10]
+#+CAPTION: Clock summary at [2016-12-11 Sun 17:04]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *65:47* |       |       | 100.0 |
+| *Total time*                                                                | *66:38* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 65:47   |       |       | 100.0 |
-| Active                                                                      |         | 65:47 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  2:48 |   4.3 |
+| Stories                                                                     | 66:38   |       |       | 100.0 |
+| Active                                                                      |         | 66:38 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  2:48 |   4.2 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  1:02 |   1.6 |
 | COMPLETED Update readme                                                     |         |       |  0:11 |   0.3 |
 | COMPLETED Test data generation for dates generates invalid dates            |         |       |  0:33 |   0.8 |
 | COMPLETED Handle missing stitch templates scenario                          |         |       |  1:04 |   1.6 |
 | COMPLETED Move project directory to output options                          |         |       |  1:10 |   1.8 |
-| COMPLETED Update the conceptual model to clarify backends and kernels       |         |       |  4:20 |   6.6 |
+| COMPLETED Update the conceptual model to clarify backends and kernels       |         |       |  4:20 |   6.5 |
 | COMPLETED Detect knitter and disable code generation accordingly            |         |       |  1:15 |   1.9 |
-| COMPLETED Clean up kernel and backend confusion                             |         |       |  5:17 |   8.0 |
-| COMPLETED Add a "language" directory for each backend                       |         |       |  5:44 |   8.7 |
+| COMPLETED Clean up kernel and backend confusion                             |         |       |  5:17 |   7.9 |
+| COMPLETED Add a "language" directory for each backend                       |         |       |  5:44 |   8.6 |
 | COMPLETED Split C++ profiles and templates from C#                          |         |       |  1:11 |   1.8 |
 | COMPLETED Formatter registrar validation is not being called                |         |       |  0:20 |   0.5 |
 | COMPLETED Move decoration repository to quilt                               |         |       |  0:43 |   1.1 |
 | COMPLETED Move module id container into yarn                                |         |       |  0:24 |   0.6 |
-| COMPLETED Add basic infrastructure for C#                                   |         |       | 17:02 |  25.9 |
-| COMPLETED Add support for C#-style documentation                            |         |       |  1:57 |   3.0 |
-| COMPLETED Add support for visual studio projects and solutions              |         |       |  6:05 |   9.2 |
+| COMPLETED Add basic infrastructure for C#                                   |         |       | 17:02 |  25.6 |
+| COMPLETED Add support for C#-style documentation                            |         |       |  1:57 |   2.9 |
+| COMPLETED Add support for visual studio projects and solutions              |         |       |  6:05 |   9.1 |
 | COMPLETED OSX build is borked                                               |         |       |  0:21 |   0.5 |
 | COMPLETED Add facet directories to locator                                  |         |       |  1:09 |   1.7 |
 | COMPLETED Split json and dia tests                                          |         |       |  0:12 |   0.3 |
 | COMPLETED Split the "built-ins" by language                                 |         |       |  0:28 |   0.7 |
-| COMPLETED Models should have an associated language                         |         |       |  2:57 |   4.5 |
+| COMPLETED Models should have an associated language                         |         |       |  2:57 |   4.4 |
 | COMPLETED Add support for properties in C#                                  |         |       |  2:20 |   3.5 |
 | POSTPONED Use an unordered map in qualified name                            |         |       |  0:10 |   0.3 |
 | COMPLETED Add types with no properties and one property                     |         |       |  0:05 |   0.1 |
 | COMPLETED Ensure a stable sort of project items                             |         |       |  0:17 |   0.4 |
-| COMPLETED Identify floating point types in yarn                             |         |       |  1:25 |   2.2 |
+| COMPLETED Identify floating point types in yarn                             |         |       |  1:25 |   2.1 |
 | STARTED Add support for test data generation in C#                          |         |       |  1:03 |   1.6 |
-| STARTED Add support for Equals in C#                                        |         |       |  2:49 |   4.3 |
+| STARTED Add helper infrastructure to C#                                     |         |       |  0:51 |   1.3 |
+| STARTED Add support for Equals in C#                                        |         |       |  2:49 |   4.2 |
 | STARTED Language namespaces and modeling element locations                  |         |       |  0:53 |   1.3 |
 | STARTED Add support for Decimal numbers in C++                              |         |       |  0:32 |   0.8 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
@@ -669,6 +670,19 @@ Links:
 - [[https://gist.github.com/DForshner/5533088][NaiveFibonacciSequenceGenerator.cs]]
 - [[https://coding.abel.nu/2011/12/return-ienumerable-with-yield-return/][Return IEnumerable with yield return]]
 
+*** STARTED Add helper infrastructure to C#                           :story:
+    CLOCK: [2016-12-11 Sun 16:42]--[2016-12-11 Sun 17:03] =>  0:21
+    CLOCK: [2016-12-11 Sun 16:11]--[2016-12-11 Sun 16:41] =>  0:30
+
+It is now clear we will need helpers:
+
+- types: floating point comparison.
+- test data: for most proxy types.
+- io: for most proxy types.
+
+Add all of the required infrastructure to C# so we can make use of
+helpers in these facets.
+
 *** STARTED Add support for Equals in C#                              :story:
     CLOCK: [2016-12-11 Sun 16:01]--[2016-12-11 Sun 16:10] =>  0:09
     CLOCK: [2016-12-11 Sun 12:44]--[2016-12-11 Sun 12:57] =>  0:13
@@ -695,7 +709,9 @@ Problems with GetHashCode:
 We need a way to know if a type has a static GetHashCode or not.
 
 We also need a way to compare floating point numbers. In both cases
-the easiest thing is to use helpers.
+the easiest thing is to use helpers. See:
+
+- [[http://stackoverflow.com/questions/3874627/floating-point-comparison-functions-for-c-sharp][Floating point comparison functions for C#]]
 
 *** STARTED Language namespaces and modeling element locations        :story:
     CLOCK: [2016-12-11 Sun 10:01]--[2016-12-11 Sun 10:15] =>  0:14
