--- a/doc/agile/sprint_backlog_93.org
+++ b/doc/agile/sprint_backlog_93.org
@@ -12,14 +12,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-12-11 Sun 17:57]
+#+CAPTION: Clock summary at [2016-12-11 Sun 18:04]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *67:29* |       |       | 100.0 |
+| *Total time*                                                                | *67:36* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 67:29   |       |       | 100.0 |
-| Active                                                                      |         | 67:29 |       | 100.0 |
+| Stories                                                                     | 67:36   |       |       | 100.0 |
+| Active                                                                      |         | 67:36 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  2:48 |   4.1 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  1:02 |   1.5 |
 | COMPLETED Update readme                                                     |         |       |  0:11 |   0.3 |
@@ -27,7 +27,7 @@
 | COMPLETED Handle missing stitch templates scenario                          |         |       |  1:04 |   1.6 |
 | COMPLETED Move project directory to output options                          |         |       |  1:10 |   1.7 |
 | COMPLETED Update the conceptual model to clarify backends and kernels       |         |       |  4:20 |   6.4 |
-| COMPLETED Detect knitter and disable code generation accordingly            |         |       |  1:15 |   1.9 |
+| COMPLETED Detect knitter and disable code generation accordingly            |         |       |  1:15 |   1.8 |
 | COMPLETED Clean up kernel and backend confusion                             |         |       |  5:17 |   7.8 |
 | COMPLETED Add a "language" directory for each backend                       |         |       |  5:44 |   8.5 |
 | COMPLETED Split C++ profiles and templates from C#                          |         |       |  1:11 |   1.8 |
@@ -48,7 +48,7 @@
 | COMPLETED Ensure a stable sort of project items                             |         |       |  0:17 |   0.4 |
 | COMPLETED Identify floating point types in yarn                             |         |       |  1:25 |   2.1 |
 | STARTED Add support for test data generation in C#                          |         |       |  1:03 |   1.6 |
-| STARTED Add helper infrastructure to C#                                     |         |       |  1:42 |   2.5 |
+| STARTED Add helper infrastructure to C#                                     |         |       |  1:49 |   2.7 |
 | STARTED Add support for Equals in C#                                        |         |       |  2:49 |   4.2 |
 | STARTED Language namespaces and modeling element locations                  |         |       |  0:53 |   1.3 |
 | STARTED Add support for Decimal numbers in C++                              |         |       |  0:32 |   0.8 |
@@ -671,6 +671,7 @@ Links:
 - [[https://coding.abel.nu/2011/12/return-ienumerable-with-yield-return/][Return IEnumerable with yield return]]
 
 *** STARTED Add helper infrastructure to C#                           :story:
+    CLOCK: [2016-12-11 Sun 17:57]--[2016-12-11 Sun 18:04] =>  0:07
     CLOCK: [2016-12-11 Sun 17:45]--[2016-12-11 Sun 17:56] =>  0:11
     CLOCK: [2016-12-11 Sun 17:04]--[2016-12-11 Sun 17:44] =>  0:40
     CLOCK: [2016-12-11 Sun 16:42]--[2016-12-11 Sun 17:03] =>  0:21
