--- a/doc/agile/sprint_backlog_93.org
+++ b/doc/agile/sprint_backlog_93.org
@@ -12,14 +12,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-12-11 Sun 18:17]
+#+CAPTION: Clock summary at [2016-12-11 Sun 18:24]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *67:48* |       |       | 100.0 |
+| *Total time*                                                                | *67:54* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 67:48   |       |       | 100.0 |
-| Active                                                                      |         | 67:48 |       | 100.0 |
+| Stories                                                                     | 67:54   |       |       | 100.0 |
+| Active                                                                      |         | 67:54 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  2:48 |   4.1 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  1:02 |   1.5 |
 | COMPLETED Update readme                                                     |         |       |  0:11 |   0.3 |
@@ -29,7 +29,7 @@
 | COMPLETED Update the conceptual model to clarify backends and kernels       |         |       |  4:20 |   6.4 |
 | COMPLETED Detect knitter and disable code generation accordingly            |         |       |  1:15 |   1.8 |
 | COMPLETED Clean up kernel and backend confusion                             |         |       |  5:17 |   7.8 |
-| COMPLETED Add a "language" directory for each backend                       |         |       |  5:44 |   8.5 |
+| COMPLETED Add a "language" directory for each backend                       |         |       |  5:44 |   8.4 |
 | COMPLETED Split C++ profiles and templates from C#                          |         |       |  1:11 |   1.7 |
 | COMPLETED Formatter registrar validation is not being called                |         |       |  0:20 |   0.5 |
 | COMPLETED Move decoration repository to quilt                               |         |       |  0:43 |   1.1 |
@@ -41,15 +41,15 @@
 | COMPLETED Add facet directories to locator                                  |         |       |  1:09 |   1.7 |
 | COMPLETED Split json and dia tests                                          |         |       |  0:12 |   0.3 |
 | COMPLETED Split the "built-ins" by language                                 |         |       |  0:28 |   0.7 |
-| COMPLETED Models should have an associated language                         |         |       |  2:57 |   4.4 |
+| COMPLETED Models should have an associated language                         |         |       |  2:57 |   4.3 |
 | COMPLETED Add support for properties in C#                                  |         |       |  2:20 |   3.4 |
 | POSTPONED Use an unordered map in qualified name                            |         |       |  0:10 |   0.2 |
 | COMPLETED Add types with no properties and one property                     |         |       |  0:05 |   0.1 |
 | COMPLETED Ensure a stable sort of project items                             |         |       |  0:17 |   0.4 |
 | COMPLETED Identify floating point types in yarn                             |         |       |  1:25 |   2.1 |
 | STARTED Add support for test data generation in C#                          |         |       |  1:03 |   1.5 |
-| STARTED Add helper infrastructure to C#                                     |         |       |  2:01 |   3.0 |
-| STARTED Add support for Equals in C#                                        |         |       |  2:49 |   4.2 |
+| STARTED Add helper infrastructure to C#                                     |         |       |  2:07 |   3.1 |
+| STARTED Add support for Equals in C#                                        |         |       |  2:49 |   4.1 |
 | STARTED Language namespaces and modeling element locations                  |         |       |  0:53 |   1.3 |
 | STARTED Add support for Decimal numbers in C++                              |         |       |  0:32 |   0.8 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
@@ -671,6 +671,7 @@ Links:
 - [[https://coding.abel.nu/2011/12/return-ienumerable-with-yield-return/][Return IEnumerable with yield return]]
 
 *** STARTED Add helper infrastructure to C#                           :story:
+    CLOCK: [2016-12-11 Sun 18:18]--[2016-12-11 Sun 18:24] =>  0:06
     CLOCK: [2016-12-11 Sun 18:05]--[2016-12-11 Sun 18:17] =>  0:12
     CLOCK: [2016-12-11 Sun 17:57]--[2016-12-11 Sun 18:04] =>  0:07
     CLOCK: [2016-12-11 Sun 17:45]--[2016-12-11 Sun 17:56] =>  0:11
